# DisplayCluster

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  README  README.md  README.valgrind  config.h.in
apps/: CMakeLists.txt
apps/DesktopStreamer/: CMakeLists.txt  Info.plist  desktopstreamer.icns  resources.qrc
apps/DesktopStreamer/src/: DesktopSelectionRectangle.cpp  DesktopSelectionRectangle.h  DesktopSelectionView.cpp  DesktopSelectionView.h  DesktopSelectionWindow.cpp  DesktopSelectionWindow.h  MainWindow.cpp  MainWindow.h  main.cpp  main.h
apps/DisplayCluster/: CMakeLists.txt  displaycluster.py  main.cpp  startdisplaycluster
apps/LocalStreamer/: CMakeLists.txt
apps/LocalStreamer/src/: Application.cpp  Application.h  CommandLineOptions.cpp  CommandLineOptions.h  main.cpp
apps/SimpleStreamer/: CMakeLists.txt
apps/SimpleStreamer/src/: main.cpp
python/: Content.sip  ContentWindow.sip  ContentWindowManager.sip  DC.py  DisplayGroup.sip  DisplayGroupPython.sip  TextureContent.sip  configure.py  doit.sh  pyContent.sip  pyContentWindowManager.sip  pyDisplayGroupManager.sip  pyScreenSaver.sip  pyapp.sip  pyappconfig.py.in  pydc.sip  pyproject.toml  pyproject.toml.in
src/: AsyncImageLoader.cpp  BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  Command.cpp  Command.h  CommandType.cpp  CommandType.h  Configuration.cpp  Configuration.h  Content.cpp  Content.h  ContentFactory.cpp  ContentFactory.h  ContentGraphicsItem.cpp  ContentGraphicsItem.h  ContentInteractionDelegate.cpp  ContentInteractionDelegate.h  ContentWindow.cpp  ContentWindow.h  ContentWindowGraphicsItem.cpp  ContentWindowGraphicsItem.h  ContentWindowInterface.cpp  ContentWindowInterface.h  ContentWindowListWidgetItem.cpp  ContentWindowListWidgetItem.h  ContentWindowManager.cpp  ContentWindowManager.h  Cursor.cpp  Cursor.h  DCSocketManager.cpp  DCSocketManager.h  Decoder.cpp  Decoder.h  DisplayGroup.cpp  DisplayGroup.h  DisplayGroupGraphicsScene.cpp  DisplayGroupGraphicsScene.h  DisplayGroupGraphicsView.cpp  DisplayGroupGraphicsView.h  (+152 more)
src/configuration/: Configuration.cpp  Configuration.h  MasterConfiguration.cpp  MasterConfiguration.h  WallConfiguration.cpp  WallConfiguration.h
src/core/: AbstractCommandHandler.h  BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  Command.h  CommandHandler.cpp  CommandHandler.h  CommandType.cpp  CommandType.h  Content.cpp  Content.h  ContentFactory.cpp  ContentFactory.h  ContentInteractionDelegate.cpp  ContentInteractionDelegate.h  ContentLoader.cpp  ContentLoader.h  ContentType.cpp  ContentType.h  ContentWindowGraphicsItem.cpp  ContentWindowGraphicsItem.h  ContentWindowInterface.cpp  ContentWindowInterface.h  ContentWindowListWidgetItem.cpp  ContentWindowListWidgetItem.h  ContentWindowManager.cpp  ContentWindowManager.h  DisplayGroupGraphicsScene.cpp  DisplayGroupGraphicsScene.h  DisplayGroupGraphicsView.cpp  DisplayGroupGraphicsView.h  DisplayGroupGraphicsViewProxy.cpp  DisplayGroupGraphicsViewProxy.h  DisplayGroupInterface.cpp  DisplayGroupInterface.h  DisplayGroupListWidgetProxy.cpp  DisplayGroupListWidgetProxy.h  DisplayGroupManager.cpp  DisplayGroupManager.h  DisplayGroupPython.cpp  (+90 more)
src/core/configuration/: Configuration.h  (+5 more)
src/dcWebservice/: CMakeLists.txt  DefaultHandler.cpp  DefaultHandler.h  FastCGIWrapper.cpp  FastCGIWrapper.h  Handler.h  Mapper.cpp  Mapper.h  Request.h  RequestBuilder.cpp  RequestBuilder.h  Response.cpp  Response.h  Server.cpp  Server.h  types.h
src/dcstream/: CMakeLists.txt  DcImageSegmenter.cpp  DcImageWrapper.cpp  DcImageWrapper.h  DcSocket.cpp  DcSocket.h  DcStream.cpp  DcStream.h  DcStreamEventThread.h  DcStreamPrivate.cpp  DcStreamPrivate.h  ImageJpegCompressor.cpp  ImageJpegCompressor.h  ImageSegmenter.cpp  ImageSegmenter.h  ImageWrapper.cpp  ImageWrapper.h  Socket.cpp  Socket.h  Stream.cpp  Stream.h  StreamEventThread.cpp  StreamPrivate.cpp  StreamPrivate.h  Version.in.h  dcStream.cpp  dcStream.h  types.h
src/fcgiws/: CMakeLists.txt  DefaultHandler.cpp  DefaultHandler.h  FastCGIWrapper.cpp  FastCGIWrapper.h  Handler.cpp  Handler.h  Mapper.cpp  Mapper.h  Request.h  RequestBuilder.cpp  RequestBuilder.h  Response.cpp  Response.h  Server.cpp  Server.h  types.h
src/gestures/: DoubleTapGestureRecognizer.cpp  PanGesture.h  PanGestureRecognizer.h  PinchGesture.cpp
src/lib/: CMakeLists.txt  DcSocket.cpp  DcSocket.h  dcStream.cpp  dcStream.h
src/resources/: core.qrc
src/thumbnail/: DefaultThumbnailGenerator.h  FolderThumbnailGenerator.cpp  FolderThumbnailGenerator.h  ImageThumbnailGenerator.cpp  ImageThumbnailGenerator.h  MovieThumbnailGenerator.cpp  MovieThumbnailGenerator.h  PDFThumbnailGenerator.cpp  PDFThumbnailGenerator.h  PyramidThumbnailGenerator.cpp  PyramidThumbnailGenerator.h  StateThumbnailGenerator.h  ThumbnailGenerator.h  ThumbnailGeneratorFactory.cpp
tests/: AsciiToQtKeyCodeMapperTests.cpp  BoostRegexTests.cpp  CMakeLists.txt  CommandTests.cpp  ConfigurationTests.cpp  DockToolbarTests.cpp  GlobalQtApp.h  ImageSegmenterTests.cpp  ImageWrapperTests.cpp  LocalPixelStreamerTests.cpp  MinimalGlobalQtApp.h  MockNetworkListener.cpp  MockNetworkListener.h  MockTextInputDispatcher.cpp  NetworkSerializationTests.cpp  PixelStreamBufferTests.cpp  PixelStreamSegmentDecoderTests.cpp  PixelStreamSegmentParametersTests.cpp  SocketTests.cpp  TextInputHandlerTests.cpp  WebbrowserTests.cpp  configuration.cpp  configuration.xml  dcStreamTests.cpp  glxDisplay.h  localPixelStreamer_tests.cpp  webbrowser.cpp  webgl_interaction.html
tests/common/: PixelStreamSegmentDecoderTests.cpp
tests/core/: CommandLineOptionsTests.cpp  ConfigurationTests.cpp  DockToolbarTests.cpp  MockTextInputDispatcher.h  TextInputHandlerTests.cpp  WebbrowserTests.cpp
tests/dcWebservice/: HandlerTests.cpp  MapperTests.cpp  RequestBuilderTests.cpp  ResponseTests.cpp  ServerTests.cpp
tests/dcstream/: ImageSegmenterTests.cpp  MockNetworkListener.cpp  MockNetworkListener.h  SocketTests.cpp
tests/fcgiws/: HandlerTests.cpp  MapperTests.cpp  RequestBuilderTests.cpp  ResponseTests.cpp  ServerTests.cpp  app.cpp
tests/perf/: dcStreamTests.cpp
(+110 files in other folders)
