[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

[project]
name = "pydc"

[tool.sip.bindings.pydc]
headers = ["pyContent.h"]
include-dirs = ["../src", "../build", "/usr/include/x86_64-linux-gnu/qt5", "/usr/include/x86_64-linux-gnu/qt5/QtWidgets", "/usr/include/x86_64-linux-gnu/qt5/QtXmlPatterns"]
libraries = ["pywrapper", "dl"]
library-dirs = ["../../install/lib"]

